WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240690
REGRESSION (
r294469
): [ iOS ] TestWebKitAPI.NSAttributedStringWebKitAdditions.DirectoriesNotCreated is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=240690
Summary
REGRESSION (r294469): [ iOS ] TestWebKitAPI.NSAttributedStringWebKitAdditions...
Karl Rackler
Reported
2022-05-19 15:43:49 PDT
Description: TestWebKitAPI.NSAttributedStringWebKitAdditions.DirectoriesNotCreated The first failure I saw on the dashboard was on 5/19/2022 at
r294469
. REPRODUCTION STEPS I can reproduce this on
r294469
. Command: run-api-tests --root 294469 --ios-simulator —release TestWebKitAPI.NSAttributedStringWebKitAdditions.DirectoriesNotCreated Result: Failed TestWebKitAPI.NSAttributedStringWebKitAdditions.DirectoriesNotCreated LEAK: 2 WebProcessPool LEAK: 2 WebPageProxy /Volumes/Data/worker/trunk-skyecho-ios-simulator-debug-archive/build/OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/NSAttributedStringWebKitAdditions.mm:72 Value of: cookieDirectoryExists() Actual: true Expected: false History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.NSAttributedStringWebKitAdditions.DirectoriesNotCreated&limit=50000&platform=ios
Log: Failed TestWebKitAPI.NSAttributedStringWebKitAdditions.DirectoriesNotCreated LEAK: 2 WebProcessPool LEAK: 2 WebPageProxy /Volumes/Data/worker/Apple-iOS-15-Simulator-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/NSAttributedStringWebKitAdditions.mm:72 Value of: cookieDirectoryExists() Actual: true Expected: false
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-19 15:44:10 PDT
<
rdar://problem/93608582
>
Sihui Liu
Comment 2
2022-05-20 14:47:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/859
EWS
Comment 3
2022-05-23 12:47:06 PDT
Committed
r294670
(
250884@main
): <
https://commits.webkit.org/250884@main
> Reviewed commits have been landed. Closing PR #859 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug